log

Wed 13 Mar 2024 08:31:06 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 | } return numeroMax;
      |   ^~~~~~
Compilation failed
5bd7dc0
Wed 13 Mar 2024 08:31:23 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:22:1: error: expected identifier or ‘(’ before ‘return’
   22 | return numeroMax;
      | ^~~~~~
Compilation failed
cc380b3
Wed 13 Mar 2024 08:31:38 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
a44f88c
Wed 13 Mar 2024 08:31:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:13: error: unused variable ‘numeroMax’ [-Werror=unused-variable]
   18 |         int numeroMax = arr[i];
      |             ^~~~~~~~~
exercises.c:21:10: error: ‘numeroMax’ undeclared (first use in this function)
   21 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c29c56a
Wed 13 Mar 2024 08:32:21 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:13: error: unused variable ‘numeroMax’ [-Werror=unused-variable]
   18 |         int numeroMax = arr[i];
      |             ^~~~~~~~~
exercises.c:21:10: error: ‘numeroMax’ undeclared (first use in this function)
   21 |   return numeroMax;
      |          ^~~~~~~~~
exercises.c:21:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e5a3f19
